# Django_mini

./: .gitignore  .gitmessage.txt  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
.github/workflows/: checks.yml
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
analysis/: admin.py  models.py
common/: admin.py  models.py
common/migrations/: 0001_initial.py
core/: urls.py
core/settings/: base.py  dev.py  prod.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
notifications/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
scripts/: run.sh
transactions/: admin.py  models.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py
